--- a/css/styles.css
+++ b/css/styles.css
@@ -840,3 +840,98 @@ img {
   font-size: 1.5rem;
   text-transform: uppercase;
 }
+
+/** SHOWCASE SECTION **/
+.showcase {
+  background-color: #14151A;
+}
+
+.showcase-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+}
+
+.showcase-content .showcase-item {
+  position: relative;
+  text-align: center;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.showcase-content .showcase-item:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
+.showcase-content .showcase-item:hover .item-image:before, .showcase-content .showcase-item:hover .item-content h3, .showcase-content .showcase-item:hover .item-content i, .showcase-content .showcase-item:hover .item-content p {
+  opacity: 1;
+}
+
+.showcase-content .showcase-item:hover .item-content h3, .showcase-content .showcase-item:hover .item-content p {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.showcase-content .showcase-item .item-image::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(229, 21, 21, 0.6);
+  opacity: 0;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.showcase-content .showcase-item .item-image img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.showcase-content .showcase-item .item-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  z-index: 5;
+}
+
+.showcase-content .showcase-item .item-content h3 {
+  color: #FEFEFE;
+  font-size: 2.2rem;
+  opacity: 0;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  -webkit-transform: translateY(-5rem);
+          transform: translateY(-5rem);
+}
+
+.showcase-content .showcase-item .item-content i {
+  font-size: 5rem;
+  margin: 1rem;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  opacity: 0;
+}
+
+.showcase-content .showcase-item .item-content i:hover {
+  color: #cbcbcb;
+}
+
+.showcase-content .showcase-item .item-content p {
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+  color: #FEFEFE;
+  font-size: 1.5rem;
+  opacity: 0;
+  -webkit-transform: translateY(5rem);
+          transform: translateY(5rem);
+}
