--- a/css/styles.css
+++ b/css/styles.css
@@ -1024,3 +1024,197 @@ img {
 .team-members .team-member:last-child {
   margin-left: 5rem;
 }
+
+/** CONTACT SECTION **/
+.contact {
+  background-image: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.9) 100%), url("../img/contact.jpg");
+  background-size: cover;
+  min-height: 100vh;
+}
+
+.contact-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 4rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contact-content-detail {
+  background-color: rgba(229, 21, 21, 0.8);
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  color: #FEFEFE;
+  min-height: 40rem;
+  margin-right: -5rem;
+  z-index: 2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 4rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.contact-content-detail h3 {
+  color: #FEFEFE;
+  margin-bottom: 3rem;
+}
+
+.contact-content-detail ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 2rem;
+}
+
+.contact-content-detail ul li i {
+  margin-right: 2rem;
+}
+
+.contact-content-detail ul li p {
+  font-size: 1.4rem;
+}
+
+.contact-content-form {
+  background-color: rgba(20, 21, 26, 0.8);
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+  min-height: 50rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contact-content-form form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contact-content-form form input, .contact-content-form form textarea {
+  width: 60%;
+  padding: 1rem;
+  border: none;
+  text-transform: uppercase;
+  font-family: inherit;
+  font-size: 1.4rem;
+  display: block;
+  color: #FEFEFE;
+}
+
+.contact-content-form form input:focus, .contact-content-form form textarea:focus {
+  outline: none;
+  border-bottom: 1px solid #FEFEFE;
+}
+
+.contact-content-form form :not(:last-child) {
+  margin-bottom: 3rem;
+  background-color: transparent;
+  border-bottom: 1px solid #E51515;
+}
+
+.contact-content-form form textarea {
+  resize: none;
+}
+
+.contact-content-form form input[type=submit] {
+  background-color: #FEFEFE;
+  color: #E51515;
+  cursor: pointer;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.contact-content-form form input[type=submit]:hover {
+  background-color: #E51515;
+  color: #FEFEFE;
+}
+
+/** FOOTER SECTION **/
+footer {
+  background-color: #14151A;
+  height: 6rem;
+  font-family: "Changa", sans-serif;
+}
+
+footer .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+}
+
+footer .container .copyright {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  height: 100%;
+}
+
+footer .container .copyright p {
+  line-height: 6rem;
+  font-size: 2.4rem;
+}
+
+footer .container .down-social-link {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  background-color: pink;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+footer .container .down-social-link .fc, footer .container .down-social-link .yt, footer .container .down-social-link .tw {
+  line-height: 6rem;
+  width: 100%;
+  text-align: center;
+  font-size: 2.4rem;
+}
+
+footer .container .down-social-link .fc {
+  background-color: #4b5496;
+}
+
+footer .container .down-social-link .tw {
+  background-color: #6799ed;
+}
+
+footer .container .down-social-link .yt {
+  background-color: #d92424;
+}
