--- a/scss/_abstracts.scss
+++ b/scss/_abstracts.scss
@@ -58,3 +58,19 @@ $general-transition: all .5s;
     align-items: $align-items;
     justify-content: $justify-content;
 }
+
+
+@mixin media ($screensize) {
+
+    @if ($screensize == large) {
+        @media(max-width: 992px) { @content };
+    }
+
+    @if ($screensize == medium) {
+        @media(max-width: 768px) { @content };
+    }
+
+    @if ($screensize == small) {
+        @media(max-width: 576px) { @content };
+    }
+}
