--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -83,8 +83,17 @@
     border-bottom: 1px solid $primary-color;
     transform: skew(-28deg);
 
+    @include media(large) {
+        transform: skew(0deg);
+        border: none;
+        margin-left: 0;
+    }
+
     & > * {
         transform: skew(28deg);
+        @include media(large) {
+            transform: skew(0deg);
+        }
     }
 
     &-tags {
@@ -101,6 +110,10 @@
     &-user {
         display: flex;
         align-items: center;
+
+        @include media(small) {
+            flex-direction: column;
+          }
 
         img {
             width: 8rem;
@@ -134,6 +147,10 @@
 
         &-rating {
             margin-left: auto;
+
+            @include media(small) {
+                margin-left: 0;
+              }
 
             .checked {
                 color: $primary-color;
