--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -165,6 +165,18 @@
     height: 40rem;
     perspective: 1000px;
 
+    @include media(large) {
+        height: 35rem;
+    }
+
+    @include media(medium) {
+        height: 30rem;
+    }
+
+    @include media(small) {
+        height: 25rem;
+    }
+
     &-inner {
         position: relative;
         width: 100%;
