--- a/scss/_abstracts.scss
+++ b/scss/_abstracts.scss
@@ -62,6 +62,10 @@ $general-transition: all .5s;
 
 @mixin media ($screensize) {
 
+    @if ($screensize == xlarge) {
+        @media(max-width: 1280px) { @content };
+    }
+
     @if ($screensize == large) {
         @media(max-width: 992px) { @content };
     }
