--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -689,6 +689,16 @@ img {
   grid-template-rows: repeat(3, 20rem);
   grid-gap: 1rem;
 
+  @include media(medium) {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 0;
+  }
+
+  @include media(small) {
+    grid-template-columns: repeat(2, 1fr);
+
+  }
+
   &-item {
     position: relative;
     cursor: pointer;
@@ -702,36 +712,94 @@ img {
     &-2 {
       grid-row: 1 / span 2;
       grid-column: 2;
+
+      @include media(medium) {
+        grid-row: 1;
+        grid-column: 2;
+      }
     }
 
     &-3 {
       grid-row: 1;
       grid-column: 3 / span 2;
+
+      @include media(medium) {
+        grid-row: 1;
+        grid-column: 3;
+      }
+
+      @include media(small) {
+        grid-row: 2;
+        grid-column: 1;
+      }
     }
 
     &-4 {
       grid-row: 2;
       grid-column: 1;
+
+      @include media(small) {
+        grid-row: 2;
+        grid-column: 2;
+      }
     }
 
     &-5 {
       grid-row: 2;
       grid-column: 3;
+
+      @include media(medium) {
+        grid-row: 2;
+        grid-column: 2;
+      }
+
+      @include media(small) {
+        grid-row: 3;
+        grid-column: 1;
+      }
+
     }
 
     &-6 {
       grid-row: 2 / span 2;
       grid-column: 4;
+
+      @include media(medium) {
+        grid-row: 2;
+        grid-column: 3;
+      }
+
+      @include media(small) {
+        grid-row: 3;
+        grid-column: 2;
+      }
     }
 
     &-7 {
       grid-row: 3;
       grid-column: 1;
+
+      @include media(small) {
+        grid-row: 4;
+        grid-column: 1;
+      }
+
     }
 
     &-8 {
       grid-row: 3;
       grid-column: 2 / span 2;
+
+      @include media(medium) {
+
+        grid-row: 3;
+        grid-column: 2 / span 2;
+      }
+
+      @include media(small) {
+        grid-row: 4;
+        grid-column: 2;
+      }
     }
   }
 
@@ -786,6 +854,17 @@ img {
     display: flex;
     overflow: hidden;
 
+    @include media(xlarge) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 25rem);
+    }
+
+    @include media(medium) {
+
+      grid-template-rows: repeat(2, 20rem);
+    }
+
     .showcase-item {
       position: relative;
       text-align: center;
@@ -793,6 +872,10 @@ img {
 
       &:hover {
         transform: scale(1.2);
+
+        @include media(xlarge) { 
+          transform: scale(1);
+        }
 
         .item-image:before, .item-content h3, .item-content i, .item-content p  {
           opacity: 1;
@@ -841,6 +924,10 @@ img {
           opacity: 0;
           transition: $general-transition;
           transform: translateY(-5rem);
+
+          @include media(medium) {
+            font-size: 1.8;
+          }
         }
 
         i {
@@ -851,6 +938,11 @@ img {
           &:hover {
             color: darken($light-color, 20%);
           }
+
+          @include media(medium) {
+            font-size: 4rem;
+            margin: .5rem;
+          }
         }
 
         p {
@@ -859,6 +951,11 @@ img {
           font-size: 1.5rem;
           opacity: 0;
           transform: translateY(5rem);
+
+          @include media(medium) {
+            font-size: 1.3rem;
+
+          }
         }
       }
     }
@@ -877,10 +974,34 @@ img {
 
     &:first-child {
       margin-right: 5rem;
+
+      @include media(large) {
+        margin-right: 3rem;
+    }
+
+    @include media(medium) {
+      margin-right: 1rem;
+  }
+
+  @include media(small) {
+    margin-right: 0;
+}
     }
 
     &:last-child {
       margin-left: 5rem;
+
+      @include media(large) {
+        margin-left: 3rem;
+    }
+
+    @include media(medium) {
+      margin-left: 1rem;
+  }
+
+  @include media(small) {
+    margin-left: 0;
+}
     }
   }
 }
@@ -899,6 +1020,10 @@ img {
     margin-top: 4rem;
     align-items: center;
 
+    @include media(medium) {
+      flex-direction: column;
+    }
+
     &-detail {
       background-color: rgba($primary-color, .8);
       flex: 1;
@@ -911,6 +1036,12 @@ img {
       justify-content: center;
       padding: 4rem;
       flex-direction: column;
+
+      @include media(medium) {
+        width: 90%;
+        min-height: 30rem;
+        margin-right: 0;
+      }
 
       h3 {
         color: $light-color;
@@ -940,6 +1071,11 @@ img {
       min-height: 50rem;
       display: flex;
       align-items: center;
+
+      @include media(medium) {
+        width: 90%;
+        min-height: 40rem;
+      }
 
       form {
         display: flex;
@@ -998,10 +1134,18 @@ footer {
   height: 6rem;
   font-family: $primary-font;
 
+  @include media(medium) {
+    height: 4rem;
+  }
+
   .container {
     display: flex;
     align-items: center;
     height: 100%;
+
+    @include media(medium) {
+      flex-direction: column-reverse;
+    }
 
     .copyright {
       flex: 1;
@@ -1010,6 +1154,11 @@ footer {
       p {
         line-height: 6rem;
         font-size: 2.4rem;
+
+        @include media(medium) {
+          line-height: 4rem;
+          font-size: 1.8rem;
+        }
       }
     }
 
@@ -1025,6 +1174,11 @@ footer {
         width: 100%;
         text-align: center;
         font-size: 2.4rem;
+
+        @include media(medium) {
+          line-height: 4rem;
+          font-size: 1.8rem;
+        }
 
       }
 
